# TennisScoreboard

./: .env  .gitignore  README.md  create_tables_db_orm.py  index.html  main.py  pyproject.toml  requirements.txt  study_file.py
alembic/: env.py
alembic/versions/: 2023_12_09_2122-0ae094f6d04e_create_tables.py
css/: style.css
dao/: DAO_player_repository.py  __init__.py  dao_match_repository.py  dao_player_repository.py  match_repository.py  player_repository.py  repository.py
handlers/: __init__.py  index_handler.py  match_final_score_handler.py  match_score_get_handler.py  match_score_post_handler.py  matches_handler.py  new_match_get_handler.py  new_match_handler.py  new_match_post_handler.py
model/: __init__.py  config.py  create_tables_db.py  create_tables_db_orm.py  database.py  matches.csv  matches.py  models.py  players.py
model/static_data/: ATP_Rankings.txt  generated_matches.csv  matches.csv
pages/: index.html  new-match.html
service/: __init__.py  game.py  match.py  match_service.py  player_service.py  tennis_game.py  tennis_match.py  tennis_set.py
test/: __init__.py  test_TennisGame.py  test_tennis_game.py  test_tennis_match.py  test_tennis_set.py
view/pages/: index.html  index_flex.html  match-score-final.html  match-score.html  matches-incorrect.html  matches.html  new-match-incorrect.html  new-match.html  not_found.html  page.html  test.html
view/static/css/: style.css
