[tool.poetry]
name = "TennisScoreboard"
version = "0.1.0"
description = "4-th pet project"
authors = ["Victor Smirnov <csatom@yandex.ru>"]
license ="MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gunicorn = "*"


[tool.poetry.group.dev.dependencies]
waitress = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
